--- a/index.html
+++ b/index.html
@@ -240,20 +240,15 @@
                         <hr class="no-line mb-0">
                         <div class="product details">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat dolor sit amet.
-                            </p>
-                            <ul class="product details">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>consectetur adipisicing elit, sed do eiusmod tempor</li>
-                                <li>incididunt ut labore et dolore magna aliqua</li>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco</li>
-                                <li>laboris nisi ut aliquip ex ea commodo consequat dolor sit amet</li>
-                            </ul>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut.
+                                After our first week ever in China, there were always that question coming up „What is
+                                that gently tingling and numb feeling on our tongue? Where is that coming from? The more
+                                we tried that varity of culinary the more we loved it. It is not too spicy and spreads a
+                                hint of a lemon flavor in your mouth. We talk about nothing less than the aromatic spice
+                                of Szechuan Pepper. After precionist research through our tincture jars we need to find
+                                a special and suitable companion for this cheeky fresh one. We were happy to find the
+                                perfect match. The noble bitter richness and mild nutty note from the the espresso beans
+                                we picked,rounds everything together with some more spices and herbs to THE perfect
+                                match to make your drink fucking better.
                             </p>
                         </div>
 
