--- a/recipes.html
+++ b/recipes.html
@@ -1,1 +1,213 @@
-coming soon
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Better Bitters - Your Drinks Deserve Better</title>
+
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css"
+          integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/regular.css"
+          integrity="sha384-IG162Tfx2WTn//TRUi9ahZHsz47lNKzYOp0b6Vv8qltVlPkub2yj9TVwzNck6GEF" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/brands.css"
+          integrity="sha384-BKw0P+CQz9xmby+uplDwp82Py8x1xtYPK3ORn/ZSoe6Dk3ETP59WCDnX+fI1XCKK" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
+          integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
+
+    <meta property="og:url" content="https://www.betterbitters.de/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Better Bitters"/>
+    <meta property="og:description" content="Your Drinks Deserve Better - Cocktail Bitters"/>
+    <meta property="og:image" content="img/opengraph-preview.jpg"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Langar&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Serif:400,700" rel="stylesheet">
+
+    <!-- Theme CSS - Includes Bootstrap -->
+    <link href="css/creative.css" rel="stylesheet">
+</head>
+
+<body id="page-top">
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <img src="img/logo/logo-text-white.png" width="150" height="30" alt="Better Bitters">
+        </a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#bitters">Bitters</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/recipes.html">Recipes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Masthead -->
+<header class="masthead" data-parallax="scroll" data-image-src="img/bg-masthead-2.jpg">
+    <div class="container h-100">
+        <div class="row h-100 "> <!-- align-items-center justify-content-center text-center -->
+            <div class="col-lg-10 align-self-end">
+                <!--            <img src="img/logo/logo-white-full.png" width="500">-->
+                <h1 class="text-white">
+                    Our Favorite Cocktails<br/>
+                </h1>
+                <img src="img/divider.png" class="mb-5" alt=""><br/>
+                <a class="btn btn-primary btn-xl js-scroll-trigger mt-5" href="#recipes">Discover The Recipes</a><br>
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+            </div>
+        </div>
+    </div>
+</header>
+
+<section class="page-section" id="recipes">
+    <div class="container-fluid">
+        <div class="row bitter-1" id="bitter-1">
+            <div class="col-sm-6 order-1 order-sm-1 image" style="min-height: 300px"></div>
+            <div class="col-sm-6 pb-2 pt-5 my-5 order-2 order-sm-2">
+                <ul>
+                    <li>4 cl Torres 10 Brandy</li>
+                    <li>1/8 Stück Orange</li>
+                    <li>2 cl Zuckersirup</li>
+                    <li>2 cl Falernum</li>
+                    <li>Saft einer Zitrone</li>
+                    <li>6 Spritzer Szechuan Kaffee Bitter</li>
+                    <li>alles in Mixer & mit Orange garnieren</li>
+                </ul>
+                <h2 class="pt-5">Classy Lady</h2>
+                <h6>Sie ist die einzige Lady im Dorf</h6>
+            </div>
+        </div>
+
+        <div class="row bitter-2" id="bitter-2">
+            <div class="col-sm-6 order-1 order-sm-2 image" style="min-height: 300px"></div>
+            <div class="col-sm-6 pb-2 pt-5 my-5 order-2 order-sm-1">
+                <ul>
+                    <li>1/2 frische Grapefruit</li>
+                    <li>1 cl Grasovka</li>
+                    <li>2 cl O’Donnell Moonshine Bratapfel</li>
+                    <li>2 cl Gin</li>
+                    <li>6 Spritzer Tonka Kakao Bitter</li>
+                    <li>im Shaker shaken, Crushed Ice ins Glas</li>
+                    <li>mit Thomas Henry Spicy Ginger auffüllen</li>
+                </ul>
+                <h2 class="pt-5">Rosita Meier</h2>
+                <h6>Die is schön herb und trotzdem zart, die Jute</h6>
+            </div>
+        </div>
+
+        <div class="row bitter-3" id="bitter-3">
+            <div class="col-sm-6 order-1 order-sm-1 image" style="min-height: 300px"></div>
+            <div class="col-sm-6 pb-2 pt-5 my-5 order-2 order-sm-2">
+                <ul>
+                    <li>6 cl Rum Eurer Wahl</li>
+                    <li>2,5 cl frischer Limettensaft</li>
+                    <li>1 cl Orgeat (Mandelsirup)</li>
+                    <li>6 Spritzer Thai Herbs Bitter</li>
+                    <li>alles schön shaken und mit</li>
+                    <li>heftig viel Crushed Ice ins Glas</li>
+                </ul>
+                <h2 class="pt-5">Mai Pen Rai Smash</h2>
+                <h6>Oooooh, worries no haaaave</h6>
+            </div>
+        </div>
+
+        <div class="row bitter-4" id="bitter-4">
+            <div class="col-sm-6 order-1 order-sm-2 image" style="min-height: 300px"></div>
+            <div class="col-sm-6 pb-2 pt-5 my-5 order-2 order-sm-1">
+                <ul>
+                    <li>5 cl Whiskey Eurer Wahl</li>
+                    <li>2 cl Mandarinensaft</li>
+                    <li>2 cl Zuckersirup</li>
+                    <li>2 cl Zitronensaft</li>
+                    <li>6 Spritzer Chai Kurkuma Bitter</li>
+                    <li>1 Eiweiß</li>
+                    <li>im Shaker mixen und mit Zimt garnieren</li>
+                </ul>
+                <h2 class="pt-5">Santa Sour</h2>
+                <h6>Santa kommt dieses Jahr ganz bschwipst zu Euch</h6>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+        <!-- Contact Section -->
+<footer class="page-section" id="contact">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center py-5">
+                <img src="img/logo/logo-circle.png" class="logo img-fluid" alt="Better Bitters Logo" width="300"
+                     height="300"><br/>
+                <img src="img/divider.png" alt=""><br/>
+            </div>
+        </div>
+        <div class="row">
+            <!--            <div class="col-lg-4 ml-auto text-center">-->
+            <!--                <i class="fas fa-phone fa-3x mb-3"></i>-->
+            <!--                <div>+1 (202) 555-0149</div>-->
+            <!--            </div>-->
+            <div class="col-lg-4 offset-lg-4 mr-auto text-center">
+                <a class="d-block" href="mailto:contact@betterbitters.de">
+                    <i class="fas fa-envelope fa-3x mb-3"></i><br>
+                    contact@betterbitters.de
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5 pb-3">
+        <div class="small text-center">
+            Copyright &copy; 2019-2020 - Better Bitters. All Rights Reserved.
+            <a href="impressum.html">Impressum</a>
+        </div>
+    </div>
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for this template -->
+<script src="js/parallax.min.js"></script>
+<script src="js/creative.min.js"></script>
+
+</body>
+
+</html>
