--- a/index.html
+++ b/index.html
@@ -240,14 +240,25 @@
                         <hr class="no-line mb-0">
                         <div class="product details">
                             <p>
-                                After our first week ever in China, there were always that question coming up „What is
-                                that gently tingling and numb feeling on our tongue? Where is that coming from? The more
-                                we tried that varity of culinary the more we loved it. It is not too spicy and spreads a
-                                hint of a lemon flavor in your mouth. We talk about nothing less than the aromatic spice
-                                of Szechuan Pepper. After precionist research through our tincture jars we need to find
-                                a special and suitable companion for this cheeky fresh one. We were happy to find the
-                                perfect match. The noble bitter richness and mild nutty note from the the espresso beans
-                                we picked,rounds everything together with some more spices and herbs to THE perfect
+                                After our first week ever in China, that one question kept coming up:
+                            </p>
+                            <blockquote>
+                                "What is this tingling, numb feeling on our tongue? And where is it coming from?"
+                            </blockquote>
+                            <p>
+                                The more we tried the variety of Chinese cuisine, the more we loved it.
+                                It is not too spicy and spreads a hint of a lemon-y flavor in your mouth.
+                                Of course we're talking about nothing less than the aromatic spice
+                                of Szechuan Pepper.
+                            </p>
+                            <p>
+                                After days of experiments with our tincture jars, to find
+                                a special and suitable companion for this cheeky fresh ingredient, we were happy to find
+                                the perfect match:
+                            </p>
+                            <p>
+                                The noble bitter richness and mild nutty note from espresso beans.
+                                They round everything up nicely with some more spices and herbs to THE perfect
                                 match to make your drink fucking better.
                             </p>
                         </div>
