--- a/index.html
+++ b/index.html
@@ -100,24 +100,26 @@
                 <div class="container">
                     <div class="row my-5 py-5 pr-3">
                         <div class="col" style="padding-left: 130px">
-                            <img src="img/logo/logo-text-white.png" class="img-fluid" width="249" height="50"
-                                 alt="Better Bitters">
-                            <hr class="colored mb-3">
-                            <p class="highlighted">Your drinks deserve better</p>
-                            <hr class="no-line mb-3">
-                            <p>
-                                Legend has it that one day in 2019 we got drunk and googled how to make better drinks.
-                                Your bartender’s simple secret?
-                            </p>
-                            <p>
-                                <b>Cocktail Bitters</b>
-                            </p>
-                            <p>
-                                The high alcohol, high taste addition to your
-                                drinks to make them <i>awesome</i>. To make them fucking <b>better</b> than all the
-                                other drinks. And thus, after countless hangovers through experimenting, we handcrafted
-                                these unique recipes for you to enjoy at home.
-                            </p>
+                            <div class="overlayed">
+                                <img src="img/logo/logo-text-white.png" class="img-fluid" width="249" height="50"
+                                     alt="Better Bitters">
+                                <hr class="colored mb-3">
+                                <p class="highlighted">Your drinks deserve better</p>
+                                <hr class="no-line mb-3">
+                                <p>
+                                    Legend has it that one day in 2019 we got drunk and googled how to make better drinks.
+                                    Your bartender’s simple secret?
+                                </p>
+                                <p>
+                                    <b>Cocktail Bitters</b>
+                                </p>
+                                <p>
+                                    The high alcohol, high taste addition to your
+                                    drinks to make them <i>awesome</i>. To make them fucking <b>better</b> than all the
+                                    other drinks. And thus, after countless hangovers through experimenting, we handcrafted
+                                    these unique recipes for you to enjoy at home.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -176,7 +178,7 @@
         <div class="row">
             <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-1">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="szechuan coffee">
+                    <img class="img-fluid py-4" src="img/products/bottle-szechuan.png" height="350" alt="szechuan coffee">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Szechuan Coffee</div>
                     </div>
@@ -184,7 +186,7 @@
             </div>
             <div class="col-6 col-sm-4 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-2">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka cocoa">
+                    <img class="img-fluid py-4" src="img/products/bottle-tonka.png" height="350" alt="tonka cocoa">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Tonka Cocoa</div>
                     </div>
@@ -192,7 +194,7 @@
             </div>
             <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-3">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="thai herbs">
+                    <img class="img-fluid py-4" src="img/products/bottle-thai.png" height="350" alt="thai herbs">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Thai Herbs</div>
                     </div>
@@ -200,7 +202,7 @@
             </div>
             <div class="col-6 col-sm-4 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-4">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="chai curcuma">
+                    <img class="img-fluid py-4" src="img/products/bottle-chai.png" height="350" alt="chai curcuma">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Chai Curcuma</div>
                     </div>
@@ -232,7 +234,7 @@
 
                 <div class="row pt-5">
                     <div class="col-md-5 pb-5 pr-5">
-                        <img src="img/products/bottle-2.png" class="img-fluid" alt="">
+                        <img src="img/products/bottle-szechuan.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6 pb-5">
                         <h2 class="mb-3">A Modern Classic</h2>
@@ -372,7 +374,7 @@
 
                 <div class="row pt-5">
                     <div class="col-md-5 pb-5">
-                        <img src="img/products/bottle-2.png" class="img-fluid" alt="">
+                        <img src="img/products/bottle-tonka.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6 pb-5">
                         <h2 class="mb-3">Sweet Indulgence</h2>
@@ -502,7 +504,7 @@
 
                 <div class="row pt-5">
                     <div class="col-md-5 pb-5 pr-5">
-                        <img src="img/products/bottle-2.png" class="img-fluid" alt="">
+                        <img src="img/products/bottle-thai.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6 pb-5">
                         <h2 class="mb-3">Worries No Have</h2>
@@ -638,7 +640,7 @@
 
                 <div class="row pt-5">
                     <div class="col-md-5 pb-5 pr-5">
-                        <img src="img/products/bottle-2.png" class="img-fluid" alt="">
+                        <img src="img/products/bottle-chai.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6 pb-5">
                         <h2 class="mb-3">Christmas Feelings</h2>
