--- a/index.html
+++ b/index.html
@@ -648,20 +648,20 @@
                         <hr class="no-line mb-0">
                         <div class="product details">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat dolor sit amet.
+                                Thinking back to India brings back vivid memories of the plethora of smells
+                                and flavors the Indian cuisine has to offer. But even those of you who haven't
+                                been to India yet, may have had the joy of tasting really delicious Chai.
                             </p>
-                            <ul class="product details">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>consectetur adipisicing elit, sed do eiusmod tempor</li>
-                                <li>incididunt ut labore et dolore magna aliqua</li>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco</li>
-                                <li>laboris nisi ut aliquip ex ea commodo consequat dolor sit amet</li>
-                            </ul>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut.
+                                "Chai" means nothing more or less than simply "tea". In India, Chai is also
+                                an abbreviation for "Massala Chai", which is probably the most flavorful
+                                spiced tea there is. "Massala" here simply meaning "mixture".
+                            </p>
+                            <p>
+                                This exquisite mixture made with cinnamon, cloves, cardamom, ginger and nutmeg
+                                is usually enjoyed together with milk. And why not bring this very experience
+                                to our luscious selection of bitters, enrich it with turmeric and elevate your
+                                cocktails to the next level!?
                             </p>
                         </div>
 
