make etsy links

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                             </div>
                         </div>
 
-                        <a class="btn btn-block btn-warning btn-xl mt-3"
-                           href="https://startbootstrap.com/themes/creative/">
+                        <a class="btn btn-block btn-warning btn-xl mt-3" target="_blank"
+                           href="https://www.etsy.com/listing/914426940/cocktail-bitter-a-modern-classic">
                             <i class="fas fa-cart-plus"></i>
                             &nbsp;
-                            Buy now on eBay
+                            Buy now on Etsy
                         </a>
                         <a class="btn btn-block btn-outline-info btn-xl mt-3"
                            href="recipes.html#bitter-1">
@@ -406,11 +406,11 @@
                             </div>
                         </div>
 
-                        <a class="btn btn-block btn-warning btn-xl mt-3"
-                           href="https://startbootstrap.com/themes/creative/">
+                        <a class="btn btn-block btn-warning btn-xl mt-3" target="_blank"
+                           href="https://www.etsy.com/listing/914422176/cocktail-bitter-sweet-indulgence-tonka">
                             <i class="fas fa-cart-plus"></i>
                             &nbsp;
-                            Buy now on eBay
+                            Buy now on Etsy
                         </a>
                         <a class="btn btn-block btn-outline-info btn-xl mt-3"
                            href="recipes.html#bitter-2">
@@ -539,11 +539,11 @@
                             </div>
                         </div>
 
-                        <a class="btn btn-block btn-warning btn-xl mt-3"
-                           href="https://startbootstrap.com/themes/creative/">
+                        <a class="btn btn-block btn-warning btn-xl mt-3" target="_blank"
+                           href="https://www.etsy.com/listing/928339997/cocktailbitter-worries-no-have-thai">
                             <i class="fas fa-cart-plus"></i>
                             &nbsp;
-                            Buy now on eBay
+                            Buy now on Etsy
                         </a>
                         <a class="btn btn-block btn-outline-info btn-xl mt-3"
                            href="recipes.html#bitter-3">
@@ -676,11 +676,11 @@
                             </div>
                         </div>
 
-                        <a class="btn btn-block btn-warning btn-xl mt-3"
-                           href="https://startbootstrap.com/themes/creative/">
+                        <a class="btn btn-block btn-warning btn-xl mt-3" target="_blank"
+                           href="https://www.etsy.com/listing/914434872/cocktail-bitter-christmas-feelings-chai">
                             <i class="fas fa-cart-plus"></i>
                             &nbsp;
-                            Buy now on eBay
+                            Buy now on Etsy
                         </a>
                         <a class="btn btn-block btn-outline-info btn-xl mt-3"
                            href="recipes.html#bitter-4">
